# gradio-medical-image-analyzer

./: .gitignore  FILE_UPLOAD_IMPLEMENTATION.md  README.md  build_frontend.sh  pyproject.toml  test_im_files.py  test_integration.py
backend/gradio_medical_image_analyzer/: __init__.py  fat_segmentation.py  medical_image_analyzer.py  medical_image_analyzer.pyi  xray_analyzer.py
backend/gradio_medical_image_analyzer/templates/: component.py
backend/gradio_medical_image_analyzer/templates/component/: index.js  style.css
backend/gradio_medical_image_analyzer/templates/example/: index.js  style.css
demo/: README.md  app.py  app_with_frontend.py  requirements.txt  space.py  wrapper_test.py
frontend/: Example.svelte  Index.svelte  package-lock.json  package.json  tsconfig.json
